Add api swagger
